syntax = "proto3";

package de.zbw.access.api.v1;

import "de/zbw/access/api/v1/access_model.proto";

option java_package = "de.zbw.access.api";
option java_multiple_files = true;

service AccessService {
  rpc AddAccessInformation (AddAccessInformationRequest) returns (AddAccessInformationResponse);
  rpc GetAccessInformation (GetAccessInformationRequest) returns (GetAccessInformationResponse);
}